# microc

./: Readme.md  dune-project  example.out  microc.opam
lib/: dune  irgen.ml  semant.ml
test/: dune  test1.ml  test2.ml
